[package]
name = "binhost"
version = "0.2.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/ivabus/binhost"
description = "HTTP server to easily serve files"

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
rocket = "0.5.0"
serde = { version = "1.0.193", features = ["derive"] }
sha2 = { version = "0.10.8", optional = true }

[features]
default = [ "sha256" ]
sha256 = [ "dep:sha2" ]
