workspace = { members = [ "runner" ] }

[package]
name = "binhost"
version = "0.3.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/ivabus/binhost"
description = "HTTP server to easily serve files"

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
rocket = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
sha2 = { version = "0.10"}
ed25519-compact = { version = "2.0.6", default-features = false, features = [ "random", "self-verify", "std"] }

# Reducing size as much as possible
[profile.release]
strip = true
opt-level = "s"
lto = true
panic = "abort"
codegen-units = 1

[profile.dev]
# Doesn't build on my machine without
opt-level = 1
