
[package]
name = "binhost"
version = "0.3.3"
edition = "2021"
license = "MIT"
repository = "https://github.com/ivabus/binhost"
description = "HTTP server to easily serve files"

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
rocket = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
sha2 = { version = "0.10" }
ed25519-compact = { version = "2.1.1", default-features = false, features = [
    "random",
    "self-verify",
    "std",
] }
once_cell = "1.19"
